unpackaged/main/default/objects/CMPL123__WF_Rule__c/CMPL123__WF_Rule__c.object-meta.xml
<CustomObject>
    <description>Workflow Rules</description>
    <label>Workflow Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>