unpackaged/main/default/objects/CMPL123__WF_Rule__c/fields/CMPL123__Has_Multiple_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Has_Multiple_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Multiple Actions</description>
        <inlineHelpText>Please check to enable multiple actions. It helps to use salesforce standard workflow rule, field updates.</inlineHelpText>
        <label>Has Multiple Actions</label>
        <type>Checkbox</type>
    </CustomField>