unpackaged/main/default/objects/CMPL123__WF_Rule__c/fields/CMPL123__Record_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Record_Type__c</fullName>
        <description>Record Type</description>
        <inlineHelpText>Record Type</inlineHelpText>
        <label>Key Value</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>