unpackaged/main/default/objects/CMPL123__WF_Rule__c/fields/CMPL123__Target_Object__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Target_Object__c</fullName>
        <description>Target Object API Name with Key Value</description>
        <inlineHelpText>Specify Target Object API Name</inlineHelpText>
        <label>Target Object/Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>