unpackaged/main/default/objects/CMPL123__WF_Rule__c/fields/CMPL123__WF_Rule_External_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__WF_Rule_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Rule External Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>