unpackaged/main/default/objects/CMPL123__WF_Rule__c/listViews/CMPL123__All.listView-meta.xml
<ListView>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Description__c</columns>
        <columns>CMPL123__Record_Type__c</columns>
        <columns>CMPL123__Target_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>